# lzt-eventus

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.en.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml
.claude/skills/lzt-extending/: SKILL.md
.claude/skills/lzt-integration/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_event_log.py  0002_subscription.py  0003_token_account.py  0004_subscription_ctx.py  0005_subscription_scope.py
deploy/: Dockerfile  autoupdate.yml  docker-compose.yml  lzt-core-autoupdate.service  lzt-core-autoupdate.timer  lzt-core.service
docs/: README.en.md  README.md  architecture.en.md  architecture.md  deploy.en.md  deploy.md  extending.en.md  extending.md  legal.en.md  legal.md
docs/for_ai/: index.en.md  index.md
docs/usage/: catalog.en.md  catalog.md  configuration.en.md  configuration.md  errors.en.md  errors.md  event-engine.en.md  event-engine.md  quickstart.en.md  quickstart.md
examples/autobuy/: _MODULE.md  buyer.py  dev.py
libs/secret_box/: __init__.py  box.py
libs/webhook_engine/: __init__.py  config.py  dispatcher.py  errors.py  signing.py  sink.py  transport.py  url_safety.py
scripts/: _lib.sh  autoupdate.py  backup.sh  health.py  install.sh  logs.sh  migrate.sh  prune.sh  quickstart.sh  redrive.sh  replay.sh  restart.sh  restore.sh  rollback.sh  run.sh  seed.sh  setup_tls.sh  status.sh  stop.sh  test.sh  update.sh
src/lzt_eventus/: _MODULE.md  __init__.py  __main__.py  config.py  engine.py  errors.py  logging_setup.py  transport.py
src/lzt_eventus/account/: reconciler.py  repo.py  token_account.py
src/lzt_eventus/baseline/: cache.py  memory.py  store.py
src/lzt_eventus/bus/: _MODULE.md  catchup.py  dlq.py
src/lzt_eventus/codecs/: json.py
src/lzt_eventus/consumers/: consumer.py  logging_consumer.py  router.py
src/lzt_eventus/cursor/: base.py  memory.py  store.py
src/lzt_eventus/daemon/: lease.py  observability.py  retention.py
src/lzt_eventus/dedup/: seen.py
src/lzt_eventus/delivery/: _MODULE.md  __init__.py  delivery.py  dispatcher.py  errors.py  repo.py  signing.py  sink.py  subscription.py  subscription_ctx.py  subscription_scope.py  transport.py
src/lzt_eventus/devkit/: _MODULE.md  __init__.py  local.py
src/lzt_eventus/diff/: differ.py  snapshot.py
src/lzt_eventus/events/: __init__.py  account.py  base.py  lot.py  marker.py  message.py  notification.py  payment.py  reputation.py
src/lzt_eventus/lib/: clock.py
src/lzt_eventus/log/: base.py  batches.py  memory.py  store.py
src/lzt_eventus/orm/: __init__.py  base.py  cursor.py  (+3 more)
tests/: eventus_fakes.py
tests/e2e/: test_api_to_delivery_e2e.py  test_real_lolzteam_api_e2e.py  test_webhook_delivery_e2e.py
tests/fixtures/: catalog_seed.json  test_testnet_server_fixture.py  testnet_server.py
tests/lzt_eventus/: test_bus_concurrency.py  test_codec_json.py  test_config.py  test_differ.py  test_engine_build_memory.py  test_engine_pipeline.py  test_engine_wiring.py  test_event_hash_stability.py  test_migration_token_account.py  test_router.py  test_stores_contract.py  test_testnet_poll_cycle.py
tests/scripts/: test_autoupdate.py
(+66 files in other folders)
